--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -9,7 +9,7 @@
 .form {
     display: flex;
     align-items: center;
-    border: 2px solid #ff85a2;
+    border: 2px solid #2f00ff;
     border-radius: 5px;
     overflow: hidden;
 }
@@ -26,8 +26,7 @@
 .button {
     padding: 10px 15px;
     border: none;
-    background-color: #ff85a2;
-    /* Soft pink */
+    background-color: #2f00ff;
     color: #ffffff;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -38,8 +37,7 @@
 .button:hover {
     background-color: #f0f8ff;
     /* Light blue on hover */
-    color: #ff85a2;
-    /* Pink text */
+    color: #6a49fc;
 }
 
 .buttonLabel {
